# ImperiumEngine

./: .cruft.json  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml  publish.yml  test.yml
doc_data/: template_mkdocs.yml
docs/: atividades.xlsx  imperiumengine.html  index.html  search.js
docs/imperiumengine/: config.html  dsl.html  indicators.html  services.html
docs/imperiumengine/config/: config_loader.html  imperiumengine_settings.html  logger.html  settings.html
docs/imperiumengine/dsl/: context.html  evaluator.html  exceptions.html  instructions.html  interpreter.html  market_data.html  parser.html  utils.html  validators.html
docs/imperiumengine/dsl/instructions/: compound_instruction.html  if_instruction.html  indicator.html  instruction.html  operation.html  trade.html  wait_instruction.html
docs/imperiumengine/indicators/: atr.html  base_indicator.html  bollinger_bands.html  ema.html  macd.html  rsi.html  vwap.html
docs/imperiumengine/services/: price_service.html
docs/reference/imperiumengine/: index.md
docs/reference/imperiumengine/analyzer/: Analyzer.md
docs/reference/imperiumengine/collector/news_base/: NewsCollectorBase.md
docs/reference/imperiumengine/collector/onchain_base/: OnchainCollectorBase.md
docs/reference/imperiumengine/collector/sentiment_base/: SentimentCollectorBase.md
docs/reference/imperiumengine/collector/social_base/: SocialCollectorBase.md
docs/reference/imperiumengine/collector/technical_base/: TechnicalCollectorBase.md
docs/reference/imperiumengine/collectors_impl/my_news/: MyNewsCollector.md
docs/reference/imperiumengine/collectors_impl/my_onchain/: MyOnchainCollector.md
docs/reference/imperiumengine/collectors_impl/my_sentiment/: MySentimentCollector.md
docs/reference/imperiumengine/collectors_impl/my_social/: MySocialCollector.md
docs/reference/imperiumengine/collectors_impl/my_technical/: MyTechnicalCollector.md
docs/reference/imperiumengine/config/imperiumengine_settings/: ImperiumengineConfig.md
docs/reference/imperiumengine/config/logger/: ColoredFormatter.md  LogFactory.md
docs/reference/imperiumengine/dsl/context/: Context.md
docs/reference/imperiumengine/dsl/evaluator/: SafeEvaluator.md
docs/reference/imperiumengine/dsl/exceptions/: DSLError.md
docs/reference/imperiumengine/dsl/interpreter/: DSLInterpreter.md
docs/reference/imperiumengine/dsl/market_data/: BinanceMarketDataProvider.md  IMarketDataProvider.md
docs/reference/imperiumengine/dsl/parser/: DSLParser.md
docs/reference/imperiumengine/dsl/validators/: StrategyValidator.md
exemplos/: a.json  ddsl.py  tt.py
exemplos/indicators/: atr.py  bollinger_bands.py  ema.py  macd.py  rsi.py  vwap.py
reference/imperiumengine/: index.html
reference/imperiumengine/analyzer/Analyzer/: index.html
reference/imperiumengine/collector/news_base/NewsCollectorBase/: index.html
reference/imperiumengine/collector/onchain_base/OnchainCollectorBase/: index.html
reference/imperiumengine/collector/sentiment_base/SentimentCollectorBase/: index.html
reference/imperiumengine/collector/social_base/SocialCollectorBase/: index.html
reference/imperiumengine/collector/technical_base/TechnicalCollectorBase/: index.html
reference/imperiumengine/collectors_impl/my_news/MyNewsCollector/: index.html
reference/imperiumengine/collectors_impl/my_onchain/MyOnchainCollector/: index.html
reference/imperiumengine/collectors_impl/my_sentiment/MySentimentCollector/: index.html
reference/imperiumengine/config/logger/ColoredFormatter/: index.html
scripts/gendoc/: dsa.py  readme.md
search/: search_index.json
src/: json-schema
src/imperiumengine/: __init__.py  analyzer.py  py.typed
src/imperiumengine/backtest/: UseCaseBacktestProfit.py  UseCaseBacktestTimeLine.py  __init__.py
src/imperiumengine/backtest/infra/: __init__.py  http.py
src/imperiumengine/backtest/log/: __init__.py  log.ini  log_config.py
src/imperiumengine/collector/: news_base.py  onchain_base.py  sentiment_base.py  social_base.py  technical_base.py
src/imperiumengine/collectors_impl/: my_news.py  my_onchain.py  my_sentiment.py  my_social.py  my_technical.py
src/imperiumengine/config/: config.toml  imperiumengine_settings.py  logger.py
src/imperiumengine/dsl/: __init__.py  context.py  evaluator.py  exceptions.py  interpreter.py  market_data.py  parser.py  utils.py  validators.py
src/imperiumengine/dsl/instructions/: compound_instruction.py  if_instruction.py  indicator.py  instruction.py  operation.py  trade.py  wait_instruction.py
src/imperiumengine/indicators/: atr.py  base_indicator.py  bollinger_bands.py  ema.py  macd.py  rsi.py  vwap.py
tests/: __init__.py  test_atr.py  test_backtest.py  test_bollinger_bands.py  test_ema.py  test_financeindicator.py  test_import.py  test_macd.py  test_rsi.py  test_vwap.py
tests/dsl/: test_context.py  test_evaluator.py  test_interpreter.py  test_marketdata.py  test_utils.py  test_validators.py
tests/dsl/instructions/: test_compound_instruction.py  test_if_instruction.py  test_indicator_instruction.py  test_instruction.py  test_operation_instruction.py  test_trade.py  test_wait_instruction.py
(+39 files in other folders)
